# obs-studio

libobs/: obs-audio.c  obs-scene.c  obs-source-transition.c  obs-source.c  obs.c  obs.h
libobs/callback/: calldata.c
libobs/graphics/: image-file.c
libobs/graphics/libnsgif/: libnsgif.c
obs/: window-basic-main-transitions.cpp  window-basic-main.cpp  window-basic-main.hpp
obs/data/locale/: en-US.ini
obs/forms/: OBSBasic.ui
plugins/: CMakeLists.txt
plugins/portaudio/: CMakeLists.txt  plugin-main.cpp
plugins/portaudio/cmake/modules/: FindPortaudio.cmake
